--- a/wagtailvideos/templates/wagtailvideos/widgets/video_chooser.html
+++ b/wagtailvideos/templates/wagtailvideos/widgets/video_chooser.html
@@ -5,12 +5,12 @@
 
 {% block chosen_state_view %}
     <div class="preview-image">
-        {% if image %}
-            {% image image max-165x165 class="show-transparency" %}
+        {% if video %}
+            <img src='{{video.thumbnail.url}}' width="165" height="165" class="show-transparency">
         {% else %}
             <img>
         {% endif %}
     </div>
 {% endblock %}
 
-{% block edit_chosen_item_url %}{% if image %}{% url 'wagtailimages:edit' image.id %}{% endif %}{% endblock %}
+{% block edit_chosen_item_url %}{% if video %}{% url 'wagtailvideos:edit' video.id %}{% endif %}{% endblock %}
