--- a/wagtailvideos/templates/wagtailvideos/chooser/results.html
+++ b/wagtailvideos/templates/wagtailvideos/chooser/results.html
@@ -16,8 +16,8 @@
     <ul class="listing horiz images chooser">
         {% for video in videos %}
             <li>
-                <a class="image-choice" href="{% if will_select_format %}{% url 'wagtailimages:chooser_select_format' image.id %}{% else %}{% url 'wagtailimages:image_chosen' image.id %}{% endif %}">
-                    <div class="image">{% image image max-165x165 class="show-transparency" %}</div>
+                <a class="image-choice" href="{% if will_select_format %}{% url 'wagtailvideos:chooser_select_format' video.id %}{% else %}{% url 'wagtailvideos:video_chosen' video.id %}{% endif %}">
+                    <div class="image"><img src='{{video.thumbnail.url}}' width="165" height="165" class="show-transparency"></div>
                     <h3>{{ video.title|ellipsistrim:60 }}</h3>
                 </a>
             </li>
