Can now edit/preview videos WIP

--- a/wagtailvideos/templates/wagtailvideos/videos/results_image.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/results_image.html
@@ -14,4 +14,4 @@
 {% endcomment %}
 
 
-<div class="image"><img src='{{image.thumbnail.url}}' height=165 width=165 class="show-transparency" /></img></div>
+<div class="image"><img src='{{video.thumbnail.url}}' height=165 width=165 class="show-transparency" /></img></div>
