--- a/wagtailvideos/templates/wagtailvideos/videos/edit.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/edit.html
@@ -1,13 +1,6 @@
 {% extends "wagtailadmin/base.html" %}
 {% load wagtailimages_tags staticfiles i18n %}
-{% block titletag %}{% blocktrans with title=image.title %}Editing image {{ title }}{% endblocktrans %}{% endblock %}
-{% block extra_css %}
-    {{ block.super }}
-
-    <!-- Focal point chooser -->
-    <link rel="stylesheet" href="{% static 'wagtailimages/css/vendor/jquery.Jcrop.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'wagtailimages/css/focal-point-chooser.css' %}" type="text/css">
-{% endblock %}
+{% block titletag %}{% blocktrans with title=video.title %}Editing video {{ title }}{% endblocktrans %}{% endblock %}
 
 {% block extra_js %}
     {{ block.super }}
@@ -20,21 +13,16 @@
             });
         });
     </script>
-
-    <!-- Focal point chooser -->
-    <script src="{% static 'wagtailadmin/js/vendor/jquery.ba-throttle-debounce.min.js' %}"></script>
-    <script src="{% static 'wagtailimages/js/vendor/jquery.Jcrop.min.js' %}"></script>
-    <script src="{% static 'wagtailimages/js/focal-point-chooser.js' %}"></script>
 {% endblock %}
 
 {% block content %}
     {% trans "Editing" as editing_str %}
-    {% include "wagtailadmin/shared/header.html" with title=editing_str subtitle=image.title icon="image" usage_object=image %}
+    {% include "wagtailadmin/shared/header.html" with title=editing_str subtitle=video.title icon="image" usage_object=video %}
 
     <div class="row row-flush nice-padding">
 
         <div class="col5">
-            <form action="{% url 'wagtailimages:edit' image.id %}" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'wagtailvideos:edit' video.id %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <ul class="fields">
                     {% for field in form %}
@@ -51,17 +39,19 @@
                     <li>
                         <input type="submit" value="{% trans 'Save' %}" />
                         {% if user_can_delete %}
-                            <a href="{% url 'wagtailimages:delete' image.id %}" class="button button-secondary no">{% trans "Delete image" %}</a>
+                            <a href="{% url 'wagtailvideos:delete' video.id %}" class="button button-secondary no">{% trans "Delete video" %}</a>
                         {% endif %}
                     </li>
                 </ul>
             </form>
         </div>
         <div class="col5 divider-after">
-            <h2 class="label">{% trans "Focal point (optional)" %}</h2>
-            <p>{% trans "To define this image's most important region, drag a box over the image below." %} {% if image.focal_point %}({% trans "Current focal point shown" %}){% endif %}</p>
+            <h2 class="label">{% trans "Video preview" %}</h2>
 
-            {% image image max-800x600 as rendition %}
+            <video style='max-width:100%;height:auto;' {# FIXME Inline styles #} preload="auto" controls="true" poster='{{video.thumbnail.url}}'>
+                <source src="{{video.file.url}}" type='video/mp4'/>
+            </video>
+            <!--img src='{{video.thumbnail.url}}' /-->
 
             <div class="focal-point-chooser"
                 style="max-width: {{ rendition.width }}px; max-height: {{ rendition.height }}px;"
@@ -78,15 +68,13 @@
         </div>
         <div class="col2 ">
             {% if url_generator_enabled %}
-                <a href="{% url 'wagtailimages:url_generator' image.id %}" class="button bicolor icon icon-link">{% trans "URL Generator" %}</a>
+                <a href="{% url 'wagtailvideos:url_generator' video.id %}" class="button bicolor icon icon-link">{% trans "URL Generator" %}</a>
                 <hr />
             {% endif %}
 
-            {% image image original as original_image %}
+            <img src='{{video.thumbnail.url}}' />
 
             <dl>
-                <dt>{% trans "Max dimensions" %}</dt>
-                <dd>{{ original_image.width }}x{{ original_image.height }}</dd>
                 <dt>{% trans "Filesize" %}</dt>
                 <dd>{% if filesize %}{{ filesize|filesizeformat }}{% else %}{% trans "File not found" %}{% endif %}</dd>
             </dl>
