--- a/wagtailvideos/templates/wagtailvideos/videos/results.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/results.html
@@ -1,9 +1,9 @@
 {% load wagtailadmin_tags %}
 {% load i18n %}
-{% if images %}
+{% if videos %}
     {% if is_searching %}
         <h2>
-        {% blocktrans count counter=images.paginator.count %}
+        {% blocktrans count counter=video.paginator.count %}
             There is one match
         {% plural %}
             There are {{ counter }} matches
@@ -16,17 +16,17 @@
     {% endif %}
 
     <ul class="listing horiz images">
-        {% for image in images %}
+        {% for video in videos %}
             <li>
-                <a class="image-choice" href="{% url 'wagtailimages:edit' image.id %}">
+                <a class="image-choice" href="{% url 'wagtailvideos:edit' video.id %}">
                     {% include "wagtailvideos/videos/results_image.html" %}
-                    <h3>{{ image.title|ellipsistrim:60 }}</h3>
+                    <h3>{{ video.title|ellipsistrim:60 }}</h3>
                 </a>
             </li>
         {% endfor %}
     </ul>
 
-    {% include "wagtailadmin/shared/pagination_nav.html" with items=images is_searching=is_searching query_string=query_string linkurl="wagtailimages:index" %}
+    {% include "wagtailadmin/shared/pagination_nav.html" with items=videos is_searching=is_searching query_string=query_string linkurl="wagtailvideos:index" %}
 
 {% else %}
     {% if is_searching %}
@@ -34,11 +34,11 @@
 
         {% search_other %}
     {% else %}
-        {% url 'wagtailimages:add_multiple' as wagtailimages_add_image_url %}
+        {% url 'wagtailvideos:add_multiple' as wagtailvideos_add_video_url %}
         {% if current_collection %}
-            <p>{% blocktrans %}You've not uploaded any videos in this collection. Why not <a href="{{ wagtailimages_add_image_url }}">add one now</a>?{% endblocktrans %}</p>
+            <p>{% blocktrans %}You've not uploaded any videos in this collection. Why not <a href="{{ wagtailvideos_add_video_url }}">add one now</a>?{% endblocktrans %}</p>
         {% else %}
-            <p>{% blocktrans %}You've not uploaded any videos. Why not <a href="{{ wagtailimages_add_image_url }}">add one now</a>?{% endblocktrans %}</p>
+            <p>{% blocktrans %}You've not uploaded any videos. Why not <a href="{{ wagtailvideos_add_video_url }}">add one now</a>?{% endblocktrans %}</p>
         {% endif %}
     {% endif %}
 {% endif %}
