--- a/wagtailvideos/templates/wagtailvideos/videos/confirm_delete.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends "wagtailadmin/base.html" %}
-{% load wagtailimages_tags %}
+{% load wagtailvideos_tags %}
 {% load i18n %}
 {% block titletag %}{% trans "Delete image" %}{% endblock %}
 
@@ -9,11 +9,11 @@
 
     <div class="row row-flush nice-padding">
         <div class="col6">
-            {% image image max-800x600 %}
+            {% video video controls %}
         </div>
         <div class="col6">
-            <p>{% trans "Are you sure you want to delete this image?" %}</p>
-            <form action="{% url 'wagtailimages:delete' image.id %}" method="POST">
+            <p>{% trans "Are you sure you want to delete this video?" %}</p>
+            <form action="{% url 'wagtailvideos:delete' video.id %}" method="POST">
                 {% csrf_token %}
                 <input type="submit" value="{% trans 'Yes, delete' %}" class="serious" />
             </form>
