Made generating transcodes happen in seprate thread to stop the blocking of the frontend. Also got rid of proxy method for video model - we don't need custom models

--- a/wagtailvideos/templates/wagtailvideos/videos/edit.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/edit.html
@@ -57,7 +57,11 @@
 				<h3>Available Transcodes</h3>
 				<ul>
 				{% for transcode in transcodes %}
+					{% if transcode.processing %}
+					<li>{{ transcode.media_format }} (Processing... hold tight) </li>
+					{%else %}
 					<li>{{ transcode.media_format }}</li>
+					{% endif %}
 				{% endfor %}
 			</ul>
 			{% else %}
