Got rid of extra cruft. Added in error handling for ffmpeg

--- a/wagtailvideos/templates/wagtailvideos/videos/edit.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/edit.html
@@ -57,11 +57,11 @@
 				<h3>Available Transcodes</h3>
 				<ul>
 				{% for transcode in transcodes %}
-					{% if transcode.processing %}
-					<li>{{ transcode.media_format }} (Processing... hold tight) </li>
-					{%else %}
-					<li>{{ transcode.media_format }}</li>
-					{% endif %}
+					<li>
+						{{ transcode.media_format }}
+						{% if transcode.processing %} (Processing... hold tight) {% endif %}
+						{% if transcode.error_message %} <pre> {{ transcode.error_message }}</pre> {% endif %}
+					</li>
 				{% endfor %}
 			</ul>
 			{% else %}
