--- a/wagtailvideos/templates/wagtailvideos/videos/_file_field.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/_file_field.html
@@ -1,9 +1,9 @@
 {% extends "wagtailadmin/shared/field.html" %}
-{% load i18n wagtailimages_tags %}
+{% load i18n %}
 {% block form_field %}
-	<img src='{{video.thumbnail.url}}' />
+	<img src='{{video.thumbnail.url }}' />
 
-    <a href="{{ original_image.url }}" class="icon icon-image">{{ video.filename }}</a><br /><br />
+    <a href="{{ video.url }}" class="icon icon-media">{{ video.filename }}</a><br /><br />
 
     {% trans "Change image file:" %}
     {{ field }}
