--- a/wagtailvideos/templates/wagtailvideos/videos/_file_field.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/_file_field.html
@@ -1,10 +1,8 @@
 {% extends "wagtailadmin/shared/field.html" %}
 {% load i18n %}
 {% block form_field %}
-	<img src='{{video.thumbnail.url }}' />
-
     <a href="{{ video.url }}" class="icon icon-media">{{ video.filename }}</a><br /><br />
 
-    {% trans "Change image file:" %}
+    {% trans "Change video file:" %}
     {{ field }}
 {% endblock %}
