--- a/wagtailvideos/templates/wagtailvideos/widgets/video_chooser.html
+++ b/wagtailvideos/templates/wagtailvideos/widgets/video_chooser.html
@@ -4,11 +4,11 @@
 {% block chooser_class %}image-chooser{% endblock %}
 
 {% block chosen_state_view %}
-    <div class="preview-image">
+    <div class="video-thumb">
         {% if video %}
             <img src='{{video.thumbnail.url}}' width="165" height="165" class="show-transparency">
         {% else %}
-            <img>
+            <img width="165" height="165" class="show-transparency">
         {% endif %}
     </div>
 {% endblock %}
