--- a/wagtailvideos/templates/wagtailvideos/videos/add.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/add.html
@@ -1,5 +1,4 @@
 {% extends "wagtailadmin/base.html" %}
-{% load wagtailimages_tags %}
 {% load i18n %}
 {% block titletag %}{% trans "Add an image" %}{% endblock %}
 
@@ -17,11 +16,11 @@
 {% endblock %}
 
 {% block content %}
-    {% trans "Add image" as add_str %}
-    {% include "wagtailadmin/shared/header.html" with title=add_str icon="image" %}
+    {% trans "Add video" as add_str %}
+    {% include "wagtailadmin/shared/header.html" with title=add_str icon="media" %}
 
     <div class="nice-padding">
-        <form action="{% url 'wagtailimages:add' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'wagtailvideos:add' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <ul class="fields">
                 {% for field in form %}
@@ -31,7 +30,7 @@
                         {% include "wagtailadmin/shared/field_as_li.html" with field=field %}
                     {% endif %}
                 {% endfor %}
-                <li><input type="submit" value="{% trans 'Save' %}" /></li>
+                <li><input class='button' type="submit" value="{% trans 'Save' %}" /></li>
             </ul>
         </form>
     </div>
