--- a/wagtailvideos/templates/wagtailvideos/multiple/add.html
+++ b/wagtailvideos/templates/wagtailvideos/multiple/add.html
@@ -3,8 +3,8 @@
 {% block titletag %}{% trans "Add multiple videos" %}{% endblock %}
 {% block extra_css %}
     {{ block.super }}
-
-    <link rel="stylesheet" href="{% static 'wagtailvideos/css/add-multiple.css' %}" type="text/css" />
+	<!-- it's cheating but we're  just going to use wagtailimages css since they should look identical anyways -->
+    <link rel="stylesheet" href="{% static 'wagtailimages/css/add-multiple.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content %}
