Added duration field to video, retrieved using ffprobe. Also updated the way post-save fields are generated

--- a/wagtailvideos/templates/wagtailvideos/videos/edit.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/edit.html
@@ -87,6 +87,8 @@
 				<dd><img src='{{ video.thumbnail.url }}' /></dd>
                 <dt>{% trans "Filesize" %}</dt>
                 <dd>{% if filesize %}{{ filesize|filesizeformat }}{% else %}{% trans "File not found" %}{% endif %}</dd>
+                <dt>{% trans "Duration" %}</dt>
+                <dd>{{ video.duration }}</dd>
             </dl>
         </div>
     </div>
