--- a/wagtailvideos/templates/wagtailvideos/chooser/results.html
+++ b/wagtailvideos/templates/wagtailvideos/chooser/results.html
@@ -1,4 +1,4 @@
-{% load wagtailimages_tags wagtailadmin_tags %}
+{% load wagtailadmin_tags %}
 {% load i18n %}
 {% if videos %}
     {% if is_searching %}
