Fixed page headers with media icons and titles

--- a/wagtailvideos/templates/wagtailvideos/multiple/add.html
+++ b/wagtailvideos/templates/wagtailvideos/multiple/add.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     {% trans "Add videos" as add_str %}
-    {% include "wagtailadmin/shared/header.html" with title=add_str icon="video" %}
+    {% include "wagtailadmin/shared/header.html" with title=add_str icon="media" %}
 
     <div class="nice-padding">
         <div class="drop-zone">
