--- a/wagtailvideos/templates/wagtailvideos/videos/index.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/index.html
@@ -20,10 +20,10 @@
 {% endblock %}
 
 {% block content %}
-    {% trans "Videos" as im_str %}
+    {% trans "Videos" as video_str %}
 
-    {% trans "Add a video" as add_img_str %}
-    {% include "wagtailadmin/shared/header.html" with title=img_str add_link="wagtailvideos:add_multiple" icon="video" add_text=add_img_str search_url="wagtailvideos:index" %}
+    {% trans "Add a video" as add_video_str %}
+    {% include "wagtailadmin/shared/header.html" with title=video_str add_link="wagtailvideos:add_multiple" icon="media" add_text=add_video_str search_url="wagtailvideos:index" %}
 
     <div class="nice-padding">
         {% if collections %}
