Created formatted_duration method for nice formatting of video duration

--- a/wagtailvideos/templates/wagtailvideos/videos/edit.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/edit.html
@@ -88,7 +88,7 @@
                 <dt>{% trans "Filesize" %}</dt>
                 <dd>{% if filesize %}{{ filesize|filesizeformat }}{% else %}{% trans "File not found" %}{% endif %}</dd>
                 <dt>{% trans "Duration" %}</dt>
-                <dd>{{ video.duration }}</dd>
+                <dd>{{ video.formatted_duration }}</dd>
             </dl>
         </div>
     </div>
