--- a/wagtailvideos/templates/wagtailvideos/videos/results.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/results.html
@@ -20,8 +20,10 @@
             <li>
                 <a class="image-choice" href="{% url 'wagtailvideos:edit' video.id %}">
                     <div class="image">
+                        {% if video.thumbnail %}
 						<img src='{{video.thumbnail.url}}' height=165 width=165 class="show-transparency" /></img>
-					</div>
+                        {% endif %}
+                    </div>
                     <h3>{{ video.title|ellipsistrim:60 }}</h3>
                 </a>
             </li>
