Added fallback message if ffmpeg is not found

--- a/wagtailvideos/templates/wagtailvideos/videos/edit.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/edit.html
@@ -28,32 +28,35 @@
     <div class="col5 divider-after">
         <h2 class="label">{% trans "Video preview" %}</h2> {% video video controls style=max-width:100% %}
         {% if can_transcode %}
-        <h3 class="label">Transcodes</h3>
-        <p>If you wish to generate HTML5 compliant transcodes use the form below. This may take a while depending on the length of the video.</p>
-        {% if transcodes %}
-        <h3 class="label">Available Transcodes</h3>
-        <ul>
-            {% for transcode in transcodes %}
-            <li>
-                {{ transcode.media_format }} ({{ transcode.quality }} quality) {% if transcode.processing %} <span class='processing'>(Processing... hold tight) </span>{% endif %} {% if transcode.error_message %}
-                <span class='transcode-error'>ERROR:</span>
-                <div class='transcode-error'>
-                    <pre> {{ transcode.error_message }}</pre>
-                </div>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        <h3 class="label">Create transcode</h3>
-        <form action="{% url 'wagtailvideos:create_transcode' video.id %}" method="POST">
-            <ul class="fields">
-                {% csrf_token %} {% include "wagtailadmin/shared/field_as_li.html" with field=transcode_form.media_format %} {% include "wagtailadmin/shared/field_as_li.html" with field=transcode_form.quality %}
+            <h3 class="label">Transcodes</h3>
+            <p>If you wish to generate HTML5 compliant transcodes use the form below. This may take a while depending on the length of the video.</p>
+            {% if transcodes %}
+            <h3 class="label">Available Transcodes</h3>
+            <ul>
+                {% for transcode in transcodes %}
                 <li>
-                    <input class="button" type='submit' value="Start" />
+                    {{ transcode.media_format }} ({{ transcode.quality }} quality) {% if transcode.processing %} <span class='processing'>(Processing... hold tight) </span>{% endif %} {% if transcode.error_message %}
+                    <span class='transcode-error'>ERROR:</span>
+                    <div class='transcode-error'>
+                        <pre> {{ transcode.error_message }}</pre>
+                    </div>
+                    {% endif %}
                 </li>
+                {% endfor %}
             </ul>
-        </form>
+            {% endif %}
+            <h3 class="label">Create transcode</h3>
+            <form action="{% url 'wagtailvideos:create_transcode' video.id %}" method="POST">
+                <ul class="fields">
+                    {% csrf_token %} {% include "wagtailadmin/shared/field_as_li.html" with field=transcode_form.media_format %} {% include "wagtailadmin/shared/field_as_li.html" with field=transcode_form.quality %}
+                    <li>
+                        <input class="button" type='submit' value="Start" />
+                    </li>
+                </ul>
+            </form>
+        {% else %}
+            <br/><br/>
+            <span class='transcode-error'>Ffmpeg is not found on your server. Please install if you wish to transcode videos into an HTML5 video compliant format.</span>
         {% endif %}
     </div>
     <div class="col2 ">
