--- a/wagtailvideos/templates/wagtailvideos/videos/results.html
+++ b/wagtailvideos/templates/wagtailvideos/videos/results.html
@@ -3,7 +3,7 @@
 {% if videos %}
     {% if is_searching %}
         <h2>
-        {% blocktrans count counter=video.paginator.count %}
+        {% blocktrans count counter=videos.paginator.count %}
             There is one match
         {% plural %}
             There are {{ counter }} matches
