fix chooser styles

--- a/wagtailvideos/templates/wagtailvideos/widgets/video_chooser.html
+++ b/wagtailvideos/templates/wagtailvideos/widgets/video_chooser.html
@@ -3,7 +3,7 @@
 {% block chooser_class %}image-chooser{% endblock %}
 
 {% block chosen_state_view %}
-    <div class="video-thumb">
+    <div class="video-thumb preview-image">
         {% if video and video.thumbnail %}
             <img src='{{video.thumbnail.url}}' width="165" height="165" class="show-transparency">
         {% else %}
@@ -13,3 +13,4 @@
 {% endblock %}
 
 {% block edit_chosen_item_url %}{% if video %}{% url 'wagtailvideos:edit' video.id %}{% endif %}{% endblock %}
+
